# aegen-chain

./: .gitignore  BRD.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION.md  Dockerfile  LICENSE  README.md  check_nodes.py  demo_client.py  demo_integration.py  docker-compose.devnet.yml  docker-compose.testnet.yml  docker-compose.yml  generate_kadena_keys.py  integration_test.py  main.cpp  start_testnet.ps1  test_rpc.py  test_settlement.py  testnet_verify.py  wallet_cli.py
Documentation/: COMPLETE_IMPLEMENTATION.md  COMPLETE_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  SECURITY_AUDIT_IMPLEMENTATION.md  TEST_REPORT.md  test_devnet.py
aegen-wallet-web/: package-lock.json  package.json  relayer.js  tailwind.config.ts
aegen-wallet-web/.next/: trace
aegen-wallet-web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
aegen-wallet-web/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
aegen-wallet-web/.next/server/vendor-chunks/: @noble.js  @swc.js  aes-js.js  available-typed-arrays.js  bip39.js  call-bind-apply-helpers.js  call-bind.js  call-bound.js  clsx.js  create-hmac.js  define-data-property.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  (+28 more)
aegen-wallet-web/app/: globals.css  layout.tsx  page.tsx
aegen-wallet-web/components/: DashboardView.tsx  LoginView.tsx  PasswordPromptModal.tsx  PrivateKeyModal.tsx  ReceiveModal.tsx  SendModal.tsx  TokenList.tsx  TransactionDetailsModal.tsx
aegen-wallet-web/components/ui/: Button.tsx  Input.tsx
aegen-wallet-web/lib/: crypto.ts  rpc.ts  utils.ts
consensus/: CMakeLists.txt  leader.cpp  leader.h  pbft.cpp  pbft.h  validator.cpp  validator.h
contracts/: aegen.pact  deploy.py  keysets.pact
core/: CMakeLists.txt  account.cpp  account.h  block.cpp  block.h  mempool.cpp  mempool.h  merkle.cpp  merkle.h  receipt.h  transaction.cpp  transaction.h  types.h
da/: CMakeLists.txt  data_availability.cpp  data_availability.h
db/: CMakeLists.txt  block_store.h  rocksdb_wrapper.cpp  rocksdb_wrapper.h  state_manager.cpp  state_manager.h
deploy/: DIGITALOCEAN.md  digitalocean_setup.sh  quick_deploy.sh  verify_testnet.sh
docs/: DEPLOYMENT_GUIDE.md
exec/: CMakeLists.txt  db_storage.h  execution_engine.cpp  execution_engine.h  sandbox_storage.h  storage_interface.h  vm.cpp  vm.h
explorer/: app.js  block.html  blocks.html  bridge.html  data.js  index.html  styles.css  tokens.html  transaction.html  transactions.html
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: aegen-dashboard.json
network/: CMakeLists.txt  gossip.cpp  gossip.h  peer.cpp  peer.h  rpc_server.cpp  rpc_server.h
proofs/: CMakeLists.txt  fraud_proof.cpp  fraud_proof.h  zk_proof.cpp  zk_proof.h
rpc/: CMakeLists.txt  endpoints.cpp  endpoints.h  handler.cpp  handler.h
scripts/: fund_wallet.ps1
settlement/: CMakeLists.txt  batch.cpp  batch.h  bridge.cpp  bridge.h  kadena_client.cpp  kadena_client.h
tests/: CMakeLists.txt  e2e_test.py
tests/unit/: block_test.cpp  consensus_test.cpp  execution_test.cpp  token_test.cpp  vm_test.cpp  wallet_test.cpp
tokens/: CMakeLists.txt  token_manager.cpp  token_manager.h  token_registry.cpp  token_registry.h  token_test_utils.h  token_transfer.cpp  token_transfer.h
util/: CMakeLists.txt  crypto.cpp  crypto.h  logging.h  uint256.cpp  uint256.h
wallet/: CMakeLists.txt  address.cpp  address.h  keypair.cpp  keypair.h  mnemonic.cpp  mnemonic.h  signer.cpp  signer.h
(+78 files in other folders)
